deploy-server2-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app08-v2
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: app08
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: "app08"
        version: v2
    spec:
      containers:
      - image: gimboo/nginx_nonroot2
        imagePullPolicy: Always
        name: app08
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
